' Generated by UML Generator
' Encoded: fLTPSo8t47xthr3nXBFWyk9T9qibhiKOrgJmKGRlKQcKIymqCufdf5b9OqASzMzFIvgJ6N9K7WoeB_NvgVrUQIfr6aS7wf7nX4eQ4o-YIesqbcoLQfXvWY_O7q2E3qBc0_6Oz28uEB1IPFGrfPAbCNa-8EGbI8Ra0utXbdA8345IxW_97NwAcFn4E6ooG_SGsQ-0QwOPg24PIKctSwRqZnD3svvbqYNzpAgyg8Hk-5YaN8CS4iOr2XuZezyt1dDtkZLFx5rMqHdl7Wx9as2-8QU9JpLKARwacsumG7r9av1vQd2HSx_bOJixDkXNlritpAzjyKib07vnIfFNGtAUhjSWmP_5D01xZzZmDde4Qzr6bom8MnbfCjXZVh37_62V-LP3J8AdcU13ii2Uu84DSCFYAJQBgLr3W_aHx6NgLFAzJEn63VazMDcECTMn714nVoI1OZkXEvG7aTNOC5-7UIESlZ6a44meTPedeeWf3E86mrW94G7bo5pJIBcB4yaqjFHLnhbEuvpwsb0v1b3aesYBAL0C3rnVYAsojgu4Dp-MsyJUz1j4qVQMySScHuIyGOniudU82UPj4LBPiE6c87F3pPW2dIQPbAhskOV9r91nkXeDrAoXfEloChmAryrxBGjsE2jj_rAMnfmgLJ57Pae-nrviTe7ZtJdnNQQBiE99j-f4ZvGkzCWc-tPEc6pq8q6TgJ8LHNYt4Ts2t8DaiKWLN9eCcM_4i0YaeIy-pQuUPXVpoSFqRdGrMHHTCZ3SvVtTzGxZrBZXfL8Y-4sfXqvN-zrEOQU8qxbKHxCUQVCbh_K5h6aQwOyqIg5MxW2qisR3Fz_EXKZ-Fn2EyxaQX-0zxikU2sPNjWMaFSDnRdvK4munFWxTn9w7MNrw11ozvT4edUydKdYWL75dgvLjtkCzB8uF3iaRCKwP2hV6JpVNpmQacFUDn9JnBfM1oWluowyDtIAy31EmlepJQCaYC8zgqIsdjdmUZGhIm8BbZjokFlcEM2MdBG7ufoeUlZizBZcNDLZy_iIo0lHluK0tUwnCdafAZdT6xkO9P8qpSCQ5X1fYHkp9LCTHJam_J6_BzhSYA-ez1XBHrczv1DhQEri7gYG7RrxMJCDcApgLHjVfa2chkdOmEInWsobKqVF5nBqC4IdHKVUTvwZifKmlcrLZFXzHUmtDTf9XkInbkqs-hEGUkJ4fMYR3RxEWVIZSg0weJFdVJt227Qh78au4HxJf1kKeLoR5ZBcnVp_xfs6l5UIvADNdedViyKj-TE5OseMaGG1-5xAgJfwW7BHSw4eyxHCfNBYVEOJPuBmAnFUVxIgHLygchGuzjLOhMcn5Orm2h6w5YaWGmLm4ea9JG5M8J_PvghKm-zeUpg32OUeIGv7c7MfPDJ1_MmCfLNSqBvE8Xo_LmwVguR8uB2UVbm_Zc_dDtSFuRZAwiWCWAbqlP7VmzcsF3DwUuCURunvv_UxOjjJvylgXL6zJDCB7-E7aRLwcWYDucCzyJl1djxC0oTQTdZqTtSv7i-iUUJEmQYk1WVvxhS4FTWPMDfrxzCvbgaAoy2HBDBbQvXRER-ONFN9oQg_5_4WnPnnKvM5z9XtJWqI7u6QJQ47mFniKnGULcYOZAuOzAiaQQzD3onqjjqOAuO2ec4PHnZEqc3w24S7Q-YIGw1zE3UwgsoD3DN-t4byVUvrPkBCxNMpMk8TDGJqFq2eEhVM6QYzqDzbxSajZz9Bn50qqNEaHOyOuOsuomXQDJOi8eXdksFZJx7aAZeuwv5inb3ZhzGdgaRRvgQzCtOIQfyNbzB0w2Jb4_JVimQ4k4B7VFwkCRK4M_Nw-XUOWRIIhIszEFpewoqKpMExt_soIgjTKYBMrhl6IrDKQR7ErizNEotmeTu76ZNNMhf4TTXRn3ZLpe4xC4tc0k5aFuZrm7__j_mi
' URL: http://www.plantuml.com/plantuml/uml/fLTPSo8t47xthr3nXBFWyk9T9qibhiKOrgJmKGRlKQcKIymqCufdf5b9OqASzMzFIvgJ6N9K7WoeB_NvgVrUQIfr6aS7wf7nX4eQ4o-YIesqbcoLQfXvWY_O7q2E3qBc0_6Oz28uEB1IPFGrfPAbCNa-8EGbI8Ra0utXbdA8345IxW_97NwAcFn4E6ooG_SGsQ-0QwOPg24PIKctSwRqZnD3svvbqYNzpAgyg8Hk-5YaN8CS4iOr2XuZezyt1dDtkZLFx5rMqHdl7Wx9as2-8QU9JpLKARwacsumG7r9av1vQd2HSx_bOJixDkXNlritpAzjyKib07vnIfFNGtAUhjSWmP_5D01xZzZmDde4Qzr6bom8MnbfCjXZVh37_62V-LP3J8AdcU13ii2Uu84DSCFYAJQBgLr3W_aHx6NgLFAzJEn63VazMDcECTMn714nVoI1OZkXEvG7aTNOC5-7UIESlZ6a44meTPedeeWf3E86mrW94G7bo5pJIBcB4yaqjFHLnhbEuvpwsb0v1b3aesYBAL0C3rnVYAsojgu4Dp-MsyJUz1j4qVQMySScHuIyGOniudU82UPj4LBPiE6c87F3pPW2dIQPbAhskOV9r91nkXeDrAoXfEloChmAryrxBGjsE2jj_rAMnfmgLJ57Pae-nrviTe7ZtJdnNQQBiE99j-f4ZvGkzCWc-tPEc6pq8q6TgJ8LHNYt4Ts2t8DaiKWLN9eCcM_4i0YaeIy-pQuUPXVpoSFqRdGrMHHTCZ3SvVtTzGxZrBZXfL8Y-4sfXqvN-zrEOQU8qxbKHxCUQVCbh_K5h6aQwOyqIg5MxW2qisR3Fz_EXKZ-Fn2EyxaQX-0zxikU2sPNjWMaFSDnRdvK4munFWxTn9w7MNrw11ozvT4edUydKdYWL75dgvLjtkCzB8uF3iaRCKwP2hV6JpVNpmQacFUDn9JnBfM1oWluowyDtIAy31EmlepJQCaYC8zgqIsdjdmUZGhIm8BbZjokFlcEM2MdBG7ufoeUlZizBZcNDLZy_iIo0lHluK0tUwnCdafAZdT6xkO9P8qpSCQ5X1fYHkp9LCTHJam_J6_BzhSYA-ez1XBHrczv1DhQEri7gYG7RrxMJCDcApgLHjVfa2chkdOmEInWsobKqVF5nBqC4IdHKVUTvwZifKmlcrLZFXzHUmtDTf9XkInbkqs-hEGUkJ4fMYR3RxEWVIZSg0weJFdVJt227Qh78au4HxJf1kKeLoR5ZBcnVp_xfs6l5UIvADNdedViyKj-TE5OseMaGG1-5xAgJfwW7BHSw4eyxHCfNBYVEOJPuBmAnFUVxIgHLygchGuzjLOhMcn5Orm2h6w5YaWGmLm4ea9JG5M8J_PvghKm-zeUpg32OUeIGv7c7MfPDJ1_MmCfLNSqBvE8Xo_LmwVguR8uB2UVbm_Zc_dDtSFuRZAwiWCWAbqlP7VmzcsF3DwUuCURunvv_UxOjjJvylgXL6zJDCB7-E7aRLwcWYDucCzyJl1djxC0oTQTdZqTtSv7i-iUUJEmQYk1WVvxhS4FTWPMDfrxzCvbgaAoy2HBDBbQvXRER-ONFN9oQg_5_4WnPnnKvM5z9XtJWqI7u6QJQ47mFniKnGULcYOZAuOzAiaQQzD3onqjjqOAuO2ec4PHnZEqc3w24S7Q-YIGw1zE3UwgsoD3DN-t4byVUvrPkBCxNMpMk8TDGJqFq2eEhVM6QYzqDzbxSajZz9Bn50qqNEaHOyOuOsuomXQDJOi8eXdksFZJx7aAZeuwv5inb3ZhzGdgaRRvgQzCtOIQfyNbzB0w2Jb4_JVimQ4k4B7VFwkCRK4M_Nw-XUOWRIIhIszEFpewoqKpMExt_soIgjTKYBMrhl6IrDKQR7ErizNEotmeTu76ZNNMhf4TTXRn3ZLpe4xC4tc0k5aFuZrm7__j_mi
' Generated on: 2025-12-03T19:41:25.472622200

@startuml
skinparam classAttributeIconSize 0
hide circle

class Aquarium {
  ~gp: GamePanel
  ~rand: Random = new Random()
  +entities: ArrayList<Entity> = new ArrayList<>()
  ~spawnCounter: int = 0
  --
  +Aquarium(gp: GamePanel)
  +spawnEntity(): void
  +update(): void
  +draw(g2: Graphics2D): void
}

class Entity {
  +x: int
  +y: int
  +speed: int
  +up1: BufferedImage
  +down1: BufferedImage
  +left1: BufferedImage
  +right1: BufferedImage
  +up2: BufferedImage
  +down2: BufferedImage
  +left2: BufferedImage
  +right2: BufferedImage
  +direction: String
  +swimFrames: BufferedImage
  +idleFrames: BufferedImage
  +turnFrames: BufferedImage
  +state: String = "idle"
  +solidArea: Rectangle
  +width: int = 64
  +height: int = 64
  +collisionOn: boolean = false
  +spriteCounter: int = 0
  +spriteNum: int = 1
  +name: String
}

class Feature {
  +oyster: MonsterType
  +jellyPink: MonsterType
  +john: MonsterType
  +lion: MonsterType
  +puffShark: MonsterType
  --
  +Feature()
  +setupMonsters(): void
  +createMonster(type: MonsterType): Entity
}

class MonsterType {
  ~name: String
  ~speed: int
  ~width: int
  ~height: int
  ~imageLeft: BufferedImage
  ~imageRight: BufferedImage
  --
  +MonsterType(name: String, speed: int, w: int, h: int)
  -loadImages(): void
}

class Player {
  ~gp: GamePanel
  ~mouseH: MouseHandler
  ~SWIM_IDLE_FRAMES: int = 12
  ~TURN_FRAMES: int = 6
  -currentFacing: String = "right"
  --
  +Player(gp: GamePanel, mouseH: MouseHandler)
  +setDefaultValues(): void
  +getPlayerImageByLoop(): void
  +update(): void
  +draw(g2: Graphics2D): void
}

class CollisionChecker {
  ~gp: GamePanel
  --
  +CollisionChecker(gp: GamePanel)
  +checkPlayerVsEnemies(player: Player, enemies: ArrayList<Entity>): void
  -processCollision(player: Player, enemy: Entity, index: int): void
}

class FishyGame {
  +{static} main(args: String[]): void
}

class GamePanel {
  +originalTileSize: int = 16
  +scale: int = 2
  +tileSize: int = originalTileSize * scale
  +screenWidth: int = 960
  +screenHeight: int = 730
  +gameState: int
  +playState: int = 1
  +gameOverState: int = 2
  +score: int = 0
  +lives: int = 3
  ~FPS: int = 60
  +background: BufferedImage
  +mouseH: MouseHandler = new MouseHandler()
  +cChecker: CollisionChecker = new CollisionChecker(this)
  +feature: Feature = new Feature()
  ~gameThread: Thread
  +player: Player = new Player(this, mouseH)
  +aquarium: Aquarium = new Aquarium(this)
  --
  +GamePanel()
  +startGameThread(): void
  +run(): void
  +update(): void
  +paintComponent(g: Graphics): void
  -drawGameUI(g2: Graphics2D): void
}

class MouseHandler {
  +mouseX: int
  +mouseY: int
  --
  +mouseDragged(e: MouseEvent): void
  +mouseMoved(e: MouseEvent): void
}

class UI {
  ~window: JFrame
  ~gamePanel: GamePanel
  +background: Image
  +bambooFrame: Image
  +titleLogo: Image
  +seashellButton1: Image
  +seashellButton2: Image
  +isHovered: boolean = false
  +andyFish: Image
  +btnX: int
  +btnY: int
  +btnW: int
  +btnH: int
  +TEXT_COLOR_CREAM: Color = new Color(255, 253, 240, 190)
  +BTN_TEXT_COLOR: Color = new Color(0, 100, 0)
  +titleFont: Font = new Font("Serif", Font.PLAIN, 42)
  +bodyFont: Font = new Font("Serif", Font.PLAIN, 28)
  -buttonFont: Font = new Font("Brush Script MT", Font.BOLD, 36)
  +introLines: String = { "Drag the mouse to control, avoid bigger fish,", "try to eat smaller fish to make", "lead grew rapidly.", "", "Press the left mouse button,", "can accelerate to catch small fish", "", "Continuous eat smaller fish, can make the", "score into times increase.." }
  --
  +UI(window: JFrame, gamePanel: GamePanel)
  -loadImage(path: String): Image
  +startGame(): void
  +paintComponent(g: Graphics): void
}

Aquarium --> GamePanel
Aquarium o-- Entity
Feature --> MonsterType
Feature ..> Entity
Player --|> Entity
Player --> GamePanel
Player --> MouseHandler
CollisionChecker --> GamePanel
CollisionChecker ..> Player
CollisionChecker ..> Entity
GamePanel --> MouseHandler
GamePanel --> CollisionChecker
GamePanel --> Feature
GamePanel --> Player
GamePanel --> Aquarium
UI --> GamePanel
@enduml